# dataidea-forum

./: README.md  pyproject.toml
dataideaforum/: db.sqlite3  manage.py
dataideaforum/dataideaforum/: celery.py  wsgi.py
dataideaforum/dataideaforum/settings/: base.py  dev.py  prod.py
dataideaforum/static/admin/css/: base.css
dataideaforum/static/spirit/stylesheets/: styles.all.min.css  styles.css
dataideaforum/templates/spirit/: _base.html
