[tool.poetry]
name = "dataidea-forum"
version = "0.1.0"
description = ""
authors = ["Kibekityo Juma Shafara <jumashafara0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-spirit = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
